# http-server

./: .gitignore  CMakeLists.txt  README.md  TODO.md  load_test.sh  load_test_results.txt  main.cpp  server  server.cpp  settings.json
include/: http.hpp  logger.hpp  middlewares.hpp  request.hpp  response.hpp  server.hpp  settings.hpp
public/: 404.html  about.html  contact.html  index.html  projects.html  style.css  test-cors.html
src/: http.cpp  logger.cpp  middlewares.cpp  request.cpp  response.cpp  server.cpp  settings.cpp
